icecreamapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icecreamapi-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: icecreamapi
  template:
    metadata:
      labels:
        app: icecreamapi
    spec:
      containers:
        - name: icecreamapi
          image: batdarg/icecreamapi:latest
          ports:
            - containerPort: 80
