icecream-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icecream-db-service
spec:
  selector:
    app: icecream-db
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 1433
  type: NodePort
